<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id = "@+id/volunteer"
        android:width="30dp"
        android:title = "For Volunteers"
        />
    <item
        android:id = "@+id/leader"
        android:title = "For Leaders"
        />
    <item
        android:id = "@+id/contact_us"
        android:title = "Contact Us"
        />
    <item
        android:id = "@+id/learn_more"
        android:title = "Learn More"
        />


</menu>