...
            android:src="@drawable/logo1"

            />

        <ImageButton
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/page1_menu_button"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:src="@drawable/baseline_menu_24" />

    </androidx.appcompat.widget.Toolbar>
...
